[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameHUDRelated/InputManagerRelated/YesNoDialogWholeScreenPanel/YesNoDialogWholeScreenPanel.gd" type="Script" id=1]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/Assets/PlayerGUI_ButtonStandard_FillBackground_Normal__Red.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/Assets/PlayerGUI_ButtonStandard_FillBackground_Normal__Green.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/Assets/PlayerGUI_ButtonStandard_FillBackground_Highlighted__Red.png" type="Texture" id=4]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/Assets/PlayerGUI_ButtonStandard_FillBackground_Highlighted__Green.png" type="Texture" id=5]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://GameHUDRelated/Tooltips/TooltipBodyConstructors/TooltipBody.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameHUDRelated/NotificationPanel/SelectionNotifPanel/SelectionNotifPanel_Border_1x1.png" type="Texture" id=8]
[ext_resource path="res://GameHUDRelated/NotificationPanel/SelectionNotifPanel/SelectionNotifPanel_TopHeader.png" type="Texture" id=9]
[ext_resource path="res://GameHUDRelated/NotificationPanel/SelectionNotifPanel/SelectionNotifPanel_Body_1x1.png" type="Texture" id=10]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 6 )

[node name="YesNoDialogWholeScreenPanel" type="Control"]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 400.0
margin_top = 230.0
margin_right = 560.0
margin_bottom = 310.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 160.0
margin_bottom = 80.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/separation = 0

[node name="Header" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 6
texture = ExtResource( 9 )

[node name="TopBorder" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_top = 14.0
margin_right = 160.0
margin_bottom = 15.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 8 )
stretch_mode = 2

[node name="BodyMarginer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 15.0
margin_right = 160.0
margin_bottom = 79.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BodyBackground" type="TextureRect" parent="MarginContainer/VBoxContainer/BodyMarginer"]
margin_right = 160.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="MarginContainer/VBoxContainer/BodyMarginer"]
margin_left = 159.0
margin_right = 160.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 8 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="MarginContainer/VBoxContainer/BodyMarginer"]
margin_right = 1.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 8 )
stretch_mode = 2

[node name="LabelMarginer" type="MarginContainer" parent="MarginContainer/VBoxContainer/BodyMarginer"]
margin_right = 160.0
margin_bottom = 64.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 6
custom_constants/margin_right = 2
custom_constants/margin_top = 5
custom_constants/margin_left = 2
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer"]
margin_left = 2.0
margin_top = 5.0
margin_right = 158.0
margin_bottom = 59.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="TooltipBody" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer" instance=ExtResource( 7 )]
margin_right = 156.0
size_flags_horizontal = 3
default_font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
default_font_size = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer"]
margin_top = 4.0
margin_right = 156.0
margin_bottom = 54.0
mouse_filter = 2

[node name="OptionContainer_No" type="MarginContainer" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer"]
margin_right = 76.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer/OptionContainer_No"]
margin_right = 76.0
margin_bottom = 50.0
mouse_filter = 2

[node name="ButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer/OptionContainer_No/VBoxContainer"]
margin_right = 76.0
margin_bottom = 35.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 0

[node name="NoButton" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer/OptionContainer_No/VBoxContainer/ButtonContainer" instance=ExtResource( 11 )]
margin_left = 4.0
margin_top = 4.0
margin_right = 72.0
margin_bottom = 35.0
mouse_filter = 0
text_for_label = "No"
background_texture_normal = ExtResource( 2 )
background_texture_highlighted = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer/OptionContainer_No/VBoxContainer"]
margin_top = 39.0
margin_right = 76.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "[Backspace]"
align = 1

[node name="OptionContainer_Yes" type="MarginContainer" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 50.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer/OptionContainer_Yes"]
margin_right = 76.0
margin_bottom = 50.0
mouse_filter = 2

[node name="ButtonContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer/OptionContainer_Yes/VBoxContainer"]
margin_right = 76.0
margin_bottom = 35.0
mouse_filter = 2
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 0

[node name="YesButton" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer/OptionContainer_Yes/VBoxContainer/ButtonContainer" instance=ExtResource( 11 )]
margin_left = 4.0
margin_top = 4.0
margin_right = 72.0
margin_bottom = 35.0
mouse_filter = 0
text_for_label = "Yes"
background_texture_normal = ExtResource( 3 )
background_texture_highlighted = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer/OptionContainer_Yes/VBoxContainer"]
margin_top = 39.0
margin_right = 76.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = SubResource( 1 )
text = "[Enter]"
align = 1

[node name="BottomBorder" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 160.0
margin_bottom = 80.0
mouse_filter = 2
size_flags_horizontal = 3
texture = ExtResource( 8 )
stretch_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_YesNoDialogWholeScreenPanel_visibility_changed"]
[connection signal="on_button_released_with_button_left" from="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer/OptionContainer_No/VBoxContainer/ButtonContainer/NoButton" to="." method="_on_NoButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="MarginContainer/VBoxContainer/BodyMarginer/LabelMarginer/VBoxContainer/HBoxContainer/OptionContainer_Yes/VBoxContainer/ButtonContainer/YesButton" to="." method="_on_YesButton_on_button_released_with_button_left"]
